--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 EJS/ToDoList - V1/node_modules
 EJS - Blog Challenge/node_modules
 EJS - Intro/ToDoList - V1/node_modules
+MongoDB - Intro/Fruits Project - Mongo Driver/node_modules
