--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ EJS/ToDoList - V1/node_modules
 EJS - Blog Challenge/node_modules
 EJS - Intro/ToDoList - V1/node_modules
 MongoDB - Intro/Fruits Project - Mongo Driver/node_modules
+MongoDB - Mongoose/Fruits Project - Mongoose/node_modules
