Section 28 - ToDo List w Mongoose
The previous To Do List website, but now with persistent storage of all the tasks. Decided to leave the "date" title of the main page and ran into some issues, but the website is now functional.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ EJS - Blog Challenge/node_modules
 EJS - Intro/ToDoList - V1/node_modules
 MongoDB - Intro/Fruits Project - Mongo Driver/node_modules
 MongoDB - Mongoose/Fruits Project - Mongoose/node_modules
+MongoDB - Persistent ToDo List/node_modules
