Section 30 - Blog Website with Mongoose
Added a database to the previously built blog website. Did it without looking at the hints. Pretty easy overall when using mongoose.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ EJS - Intro/ToDoList - V1/node_modules
 MongoDB - Intro/Fruits Project - Mongo Driver/node_modules
 MongoDB - Mongoose/Fruits Project - Mongoose/node_modules
 MongoDB - Persistent ToDo List/node_modules
+MongoDB - Blog Website/node_modules
+MongoDB - ToDo List/node_modules
