--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ MongoDB - Mongoose/Fruits Project - Mongoose/node_modules
 MongoDB - Persistent ToDo List/node_modules
 MongoDB - Blog Website/node_modules
 MongoDB - ToDo List/node_modules
+APIs - REST/Wiki API/node_modules
