Section 32 - Authentication & Security - Lvl 1
First part of the authentication and security section of the course. This is the first part or level of the section. Here a simple mechanism for logging in was added. However, the system stored the passwords in plain text.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ MongoDB - Persistent ToDo List/node_modules
 MongoDB - Blog Website/node_modules
 MongoDB - ToDo List/node_modules
 APIs - REST/Wiki API/node_modules
+Authentication/node_modules
