Section 32 - Authentication & Security - Lvl 2
Second part of the authentication and security section of the course. This section focused on using encryption to encrypt the user passwords found on the MongoDB database. It also introduced the use of "dotenv" files to hide away API keys and secrets.

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ MongoDB - Blog Website/node_modules
 MongoDB - ToDo List/node_modules
 APIs - REST/Wiki API/node_modules
 Authentication/node_modules
+Authentication/.env
