--- a/Authentication/package.json
+++ b/Authentication/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.1",
+    "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
-    "mongoose": "^6.1.10"
+    "mongoose": "^6.1.10",
+    "mongoose-encryption": "^2.1.2"
   }
 }
