Section 33 - React - First Half
The first part of the last module on React. It covers things like the basic React structure, JSX, Babel, Components, Props and the property of a javascript array ".map()"

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,10 @@ MongoDB - ToDo List/node_modules
 APIs - REST/Wiki API/node_modules
 Authentication/node_modules
 Authentication/.env
+React/jsx/node_modules
+React/template/node_modules
+React/components/node_modules
+React/template - copia/node_modules
+React/keeper_app/node_modules
+React/props/node_modules
+React/emojipedia/node_modules
