Section 33 - React - Spread Operator / To Do List
Practice exercise where the spread operator was used in order to create a simple to do list that allows the user to add new elements to a simple to do list.

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ React/emojipedia/node_modules
 React/conditional_rendering/node_modules
 React/state/node_modules
 React/event_handling/node_modules
+React/todo_list/node_modules
